# visa-form-checker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/visa_checker/: config.py  database.py  main.py  models.py
backend/src/visa_checker/db/: schema.sql
backend/src/visa_checker/routers/: compare.py  ocr.py  profiles.py
backend/src/visa_checker/services/: compare_service.py  mrz_service.py  nationality.py
backend/tests/: test_compare_service.py
extension/: background.js  content.css  content.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/adapters/: generic.js
extension/lib/: api.js
scripts/: start.sh
test-site/: index.html
