[project]
name = "visa-checker"
version = "0.1.0"
description = "Local passport OCR and visa form verification tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "fastmrz>=2.0",
    "Levenshtein>=0.26.0",
    "pymupdf>=1.24.0",
    "Unidecode>=1.3.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
